--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -1,14 +1,25 @@
+div.text {
+  color: green;
+  font-size: 28px;
+}
+
 .para,
 .small-para {
   color: hsl(0, 100%, 50%);
+}
+
+.para {
+  font-size: 22px;
 }
 
 .small-para {
   font-size: 12px;
 }
 
-.para {
-  font-size: 22px;
+.button {
+  background-color: #ffc0cb;
+  color: black;
+  font-size: 20px;
 }
 
 .confirm {
@@ -18,18 +29,7 @@
   font-weight: bold;
 } 
 
-.button {
-  background-color: #ffc0cb;
-  color: black;
-  font-size: 20px;
-}
-
-.child {
+div.child {
   color: red;
   font-size: 14px;
-}
-
-div.text {
-  color: green;
-  font-size: 28px;
 }
