--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,8 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 img {
@@ -10,6 +13,18 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  padding-bottom: 32px;
+}
+
+.images-container {
+  display: flex;
+  gap: 52px;
+}
+
+.image {
+  width: 200px;
+  box-sizing: border-box;
+  text-align: center;
 }
 
 /* do not edit this footer */
