--- a/animation/01-button-hover/style.css
+++ b/animation/01-button-hover/style.css
@@ -17,4 +17,10 @@ button {
   color: black;
   font-size: small;
   text-align: center;
+  transition: font-size 1s ease-out;
+}
+
+button:hover
+{
+  font-size: x-large;
 }
